testing upgrading of jquery

--- a/app/views/pages/bibliography.html.erb
+++ b/app/views/pages/bibliography.html.erb
@@ -174,7 +174,8 @@
       <a href="https://www.neh.gov/"><img src="/img/neh_logo.png"></a>
     </div>
     <script src="base_scripts"></script>
-<%= javascript_include_tag "base_scripts" %>
+
+<%= javascript_include_tag "jquery-2.2.0.min" %>
 <%= javascript_include_tag "annotator.min" %>
 <%= javascript_include_tag "annotator-deploy" %>
 
