css syntax correction

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -298,7 +298,7 @@ lg{
 }
 
 tei-title {
-  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
+  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif
  !important;
 }
 
