--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -298,8 +298,7 @@ lg{
 }
 
 tei-title {
-  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif
- !important;
+  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
 }
 
 TEI head{
