--- a/app/assets/stylesheets/base_styles.css
+++ b/app/assets/stylesheets/base_styles.css
@@ -6930,7 +6930,7 @@ lg{
 }
 
 tei-title {
-  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
+  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif
  !important;
 }
 
