--- a/app/assets/stylesheets/tei_styles.css
+++ b/app/assets/stylesheets/tei_styles.css
@@ -8854,7 +8854,7 @@ lg{
 }
 
 tei-title {
-  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
+  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif
  !important;
 }
 
