--- a/app/views/pages/bibliography.html.erb
+++ b/app/views/pages/bibliography.html.erb
@@ -175,7 +175,7 @@
  -->
 <%= javascript_include_tag "jquery-2.2.0.min" %>
 <%= javascript_include_tag "foundation.min" %>
-<script src="http://code.jquery.com/jquery-migrate-1.3.0.js"></script>
+<script src="https://code.jquery.com/jquery-migrate-1.3.0.js"></script>
 
 <%= javascript_include_tag "annotator.min" %>
 <%= javascript_include_tag "annotator-deploy" %>
