testing older version

--- a/app/views/pages/bibliography.html.erb
+++ b/app/views/pages/bibliography.html.erb
@@ -174,18 +174,16 @@
     </div>
  -->
 <%= javascript_include_tag "jquery-2.2.0.min" %>
-<%= javascript_include_tag "foundation.min" %>
-<script src="https://code.jquery.com/jquery-migrate-1.3.0.js"></script>
 
-<%= javascript_include_tag "annotator.min" %>
+<%= javascript_include_tag "annotator-1.2-full.min" %>
 <%= javascript_include_tag "annotator-deploy" %>
 
 <!-- m<script src="/js/annotator.min.js"></script> -->
 <!-- <script src="http://assets.annotateit.org/annotator/v1.1.0/annotator-full.min.js"></script> -->
 <!-- <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.1.0/annotator.min.css"> -->
-<%= stylesheet_link_tag 'base_styles' %>
-<%= stylesheet_link_tag 'annotator.min' %>
-<%= stylesheet_link_tag 'annotator' %>
+<%#= stylesheet_link_tag 'base_styles' %>
+<%#= stylesheet_link_tag 'annotator.min' %>
+<%#= stylesheet_link_tag 'annotator' %>
 
     <div id="coins"></div>
     <script>
