--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -6,7 +6,9 @@
         </ul>
         <section class="top-bar-section">
           <ul>
-            <li class=""><a href="/index.html">Huon d'Auvergne: A Digital Edition</a></li>
+            <li class=""> <%= link_to "Huon d'Auvergne: A Digital Edition", root_path() %>
+            <!-- <a href="/index.html">Huon d'Auvergne: A Digital Edition</a> -->
+            </li>
           </ul>
         </section>
         <section class="top-bar-section">
