working on reading interface. dynamically starts reinserting tags and parsing based on tei

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -443,3 +443,11 @@ td{
 #bibPanel{
   display: none;
 }
+
+#page-break {display: block;
+    width: 100%;
+    text-align: right;
+    color: gray;
+    margin: 2em 0 2em 0;
+    font-size: 11pt;
+}
