--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -204,7 +204,7 @@ padding-bottom: 1px;
 }
 
 tei-title {
-  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
+  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif
  !important;
 }
 
