--- a/app/views/pages/p.html.erb
+++ b/app/views/pages/p.html.erb
@@ -34,6 +34,8 @@
                         <div id="notes">
                             <div class="center">Notes</div>
                             <div class="note-contents">
+                            <!-- You'll probably want to have a @footnotes variable here. parse_footnote() gets the note text added to it for each annotation present in the line_group from whatever they're stored in. Then parse_footnotes() here generates the tags. Then you use the javascript to  -->
+                            <%#= parse_footnotes()%>
                                 <footnote id="1">This is the wrong footnote.</footnote>
                                 <footnote id="2">This is the wrong footnote.</footnote>
                                 <footnote id="3">This is the right footnote.</footnote>
