continues to clean up repo

--- a/app/views/pages/edition.html.erb
+++ b/app/views/pages/edition.html.erb
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Huon d'Auvergne | Edition</title>
-    <link rel="stylesheet" href="/build/css/base_styles.css" />
-  </head>
+<!--     <link rel="stylesheet" href="/build/css/base_styles.css" />
+ -->  </head>
   <body>
     <!--main content-->
     <header class="row">
