--- a/app/views/pages/bibliography.html.erb
+++ b/app/views/pages/bibliography.html.erb
@@ -140,7 +140,7 @@
       <a href="https://www.neh.gov/"><img src="/img/neh_logo.png"></a>
     </div>
  -->
-<%= javascript_include_tag "jquery-2.2.0.min" %>
+<%#= javascript_include_tag "jquery-2.2.0.min" %>
 
 
     <div id="coins"></div>
