cleaning up tree

--- a/app/views/pages/hell_scene.html.erb
+++ b/app/views/pages/hell_scene.html.erb
@@ -205,7 +205,8 @@
        <div class="viewerContent" id="content_imageViewer"></div>
     </div>
            <hr id="comparison-hr">
-<!--     <script src="/vmachine_assets/vmachine.js"></script>
-    <script src="/build/js/vmachine_scripts.js"></script> -->
+    <script>
+       $(document).foundation();
+    </script>
    </body>
 </html>
