--- a/app/views/pages/p.html.erb
+++ b/app/views/pages/p.html.erb
@@ -49,3 +49,7 @@
                         <%= parse_line_groups(@line_groups)%>
                     </div>
                 </div>
+
+                    <script>
+                        $(document).foundation();
+                    </script>
