--- a/app/views/pages/p.html.erb
+++ b/app/views/pages/p.html.erb
@@ -22,8 +22,8 @@
                                 </div>
                                 <div id="top-buttons">
                                     <a onclick="reveal_laisse()" id="top">Show Laisse</a> | 
-                                    <a onclick="reveal_all()">Reveal All</a> | 
-                                    <a onclick="hide_all()">Hide All</a> | 
+<!--                                     <a onclick="reveal_all()">Reveal All</a> | 
+                                    <a onclick="hide_all()">Hide All</a> |  -->
                                     <a onclick="browse_previous()">Previous</a> | 
                                     <a onclick="browse_next()">Next</a>
                                 </div>
