prep for meeting

--- a/app/views/pages/p.html.erb
+++ b/app/views/pages/p.html.erb
@@ -12,9 +12,9 @@
         <!--                <div id="hidden-byline">
                                <%= @byline %> 
                             </div> -->
-<!--                             <div id="hidden-introduction">
+                            <div id="hidden-introduction">
                                 <%= @introduction %>
-                            </div> -->
+                            </div>
 
                             <div class="center">
                                 <div id="num_laisses"></div>
