--- a/app/views/pages/p.html.erb
+++ b/app/views/pages/p.html.erb
@@ -12,32 +12,30 @@
         <!--                <div id="hidden-byline">
                                <%= @byline %> 
                             </div> -->
-                            <div id="hidden-introduction">
-                                <%= @introduction %>
-                            </div>
-
-                            <div class="center">
-                                <div id="num_laisses"></div>
+                            <div class="center-outer">
+                                <div class="center-inner">
+                                    <div id="num_laisses"></div>
                                     <input type="text" id="selected_laisse"/>
+                                        <a onclick="reveal_laisse()" id="top">Show Laisse</a> | 
+                                        <a onclick="browse_previous()">Previous</a> | 
+                                        <a onclick="browse_next()">Next</a>
                                 </div>
-                                <div id="top-buttons">
-                                    <a onclick="reveal_laisse()" id="top">Show Laisse</a> | 
-<!--                                     <a onclick="reveal_all()">Reveal All</a> | 
-                                    <a onclick="hide_all()">Hide All</a> |  -->
-                                    <a onclick="browse_previous()">Previous</a> | 
-                                    <a onclick="browse_next()">Next</a>
-                                </div>
+                            </div>
                         </div>
                         <hr>
                         <div id="notes">
-                            <div class="center">Notes</div>
-                            <div class="note-contents">
+                            <div id="hidden-introduction">
+                                <%= @introduction %>
+                            </div>
+                            <div id="note-header" class="hidden">Notes</div>
+                            <div class="note-contents hidden">
                             <!-- You'll probably want to have a @footnotes variable here. parse_footnote() gets the note text added to it for each annotation present in the line_group from whatever they're stored in. Then parse_footnotes() here generates the tags. Then you use the javascript to  -->
                             <%#= parse_footnotes()%>
                                 <footnote id="1">This is the wrong footnote.</footnote>
                                 <footnote id="2">This is the wrong footnote.</footnote>
                                 <footnote id="3">This is the right footnote.</footnote>
                                 <footnote id="4">This is the wrong footnote.</footnote>
+                                <div id="back_to_intro"><a onclick="display_intro()">Back to Introduction</a></div>
                             </div>
                         </div>
                     </TEI>
